# kiro_sample_sb

./: .gitignore  README.md  document_store.json  pyproject.toml
.kiro/specs/pdf-duplicate-detector/: .config.kiro  design.md  requirements.md  tasks.md
pdf_duplicate_detector/: __init__.py  detector.py  exceptions.py  extractor.py  ingestion.py  main.py  models.py  store.py  vectorizer.py
pdf_duplicate_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_exceptions.py  test_models.py
