[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-duplicate-detector"
version = "0.1.0"
description = "Identify duplicate PDF documents using TF-IDF vectorization and cosine similarity"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pdf_duplicate_detector*"]
